github gitbash atom complete

--- a/index.html
+++ b/index.html
@@ -11,5 +11,43 @@
         Here are several resources we will need to get moving in class.
       </p>
 
+<!--List of starting resoruces -->
+  <ol>
+    <!--GITHUB-->
+    <li>
+      <h3>GitHub</h3>
+        <img src="resources/images/github.jpg" alt="github logo"/>
+          <p>Github is an online resource we will use to save all of our projects. We will also use this website to turn our work in.</p>
+            <p>Here is the link to <a href="https://github.com/">Github</a>!
+              <h6>!!!INSERT A VIDEO ON HOW TO LOG INTO GitHub!!!</h6>
+    </li>
+
+    <!--GIT BASH-->
+    <li>
+      <h3>GitBash</h3>
+        <img src="resources/images/git.jpg" alt="git bash logo"/>
+          <p>Git bash is a shell command line that allows you to alter files using the a command prompt versus the GUI Interface.</p>
+            <p>Here is the link to <a href="https://gitforwindows.org/">GitBash</a>!
+    </li>
+
+    <!--Atom-->
+    <li>
+      <h3>Atom</h3>
+        <img src="resources/images/atom.jpg" alt="atom logo"/>
+          <p>Atom is the text editor we will be using in class. There are tons of free text editors out that you can use.
+             Atom is the one that we landed on. Feel free to try out any number of text editors to find the one that fits you the most.</p>
+               <p>Here is the link to <a href="https://atom.io">Atom</a>!
+    </li>
+
+
+
+
+
+
+
+
+
+  </ol>
+
   </body>
 </html>
